backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 3
  strategy:             
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1       
      maxSurge: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: db
            - name: DB_NAME
              value: myapp
            - name: DB_PASSWORD
              value: rootpass
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
          image: backend
          imagePullPolicy: IfNotPresent
          name: backend
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
